--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dom-to-image": "^2.6.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.525.0",
+    "mongodb": "^6.17.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
